project('ibpci', 'cpp', default_options : ['cpp_std=c++20'])

# Define the target executable
executable('mytarget',
           ['src/main.cpp',
            'src/AST.cpp',
            'src/ActivationRecord.cpp',
            'src/CallStack.cpp',
            'src/Interpreter.cpp',
            'src/Lexer.cpp',
            'src/Parser.cpp',
            'src/Reference.cpp',
            'src/Token.cpp',
            'src/ibpci.cpp'],
           include_directories: 'src/include')

